--- a/hyprland.conf
+++ b/hyprland.conf
@@ -187,9 +187,9 @@ bind = $mainMod SHIFT CTRL, 9, movetoworkspace, 9
 bind = $mainMod SHIFT CTRL, 0, movetoworkspace, 10
 
 # Toggle window with super + ctrl + [T,W,D] (terminal,webbrowser,discord)
-bind = $mainMod CTRL, T, exec, /home/penguin/.config/hypr/scripts/togglewindow -c Alacritty
-bind = $mainMod CTRL, W, exec, /home/penguin/.config/hypr/scripts/togglewindow -c firefox
-bind = $mainMod CTRL, D, exec, /home/penguin/.config/hypr/scripts/togglewindow -c vesktop
+bind = $mainMod CTRL, T, exec, /home/$USER/.config/hypr/togglewindow -c Alacritty
+bind = $mainMod CTRL, W, exec, /home/$USER/.config/hypr/togglewindow -c firefox
+bind = $mainMod CTRL, D, exec, /home/$USER/.config/hypr/togglewindow -c vesktop
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
